@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-16T01:00:39Z",
+  "timestamp" : "2022-06-16T08:16:25Z",
   "count_outdated" : 337,
   "uniques_outdated" : 181,
   "count" : 367,
-  "uniques" : 198,
+  "uniques" : 199,
   "clones" : [
     {
       "timestamp": "2022-06-02T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
